Remove unnecessary classes from block-2-container

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 		   </div>
 		</div>
 		<!-- Speaker: Ziqian Ning -->
-		<div class="block-2-container section-container section-container-gray about-block-2-container">
+		<div class="block-2-container section-container about-block-2-container">
 		   <div class="container">
 			  <div class="row">
 				 <div class="col-sm-8 block-2-box block-2-left wow fadeInLeft">
