Update bio to include ASLP@NPU affiliation

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 		   <div class="container">
 			  <div class="row">
 				 <div class="col-sm-8 block-2-box block-2-left wow fadeInLeft">
-					<h3>Ziqian Ning / <span>ByteDance-Seed</span></h3>
+					<h3>Ziqian Ning / <span>ByteDance-Seed & ASLP@NPU</span></h3>
 					<p>
 					   <b>Bio</b> Ziqian Ning is an AI Research Scientist at ByteDance-Seed, where he develops large-scale music generation models. His research focuses on generative AI for music and speech, with expertise spanning music generation, voice conversion, and text-to-speech synthesis. Prior to ByteDance, he worked at Microsoft Azure Speech and Netease Fuxi AI Lab, developing real-time voice conversion systems and expressive speech technologies. He holds a Master's degree from Northwestern Polytechnical University under Prof. Lei Xie. His work has been published at leading conferences including AAAI, ICASSP, and INTERSPEECH. Notable contributions include DiffRhythm, the first diffusion-based model for end-to-end full-length song generation, and the DualVC series for low-latency streaming voice conversion. His team achieved first place in the Singing Voice Conversion Challenge 2023, demonstrating human-level naturalness. He continues to explore how AI can transform music creation and empower artists.
 					</p>
