Add submission policy for anonymous review

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
 				   <b>Submission Policies</b><br/>
 				   Authors must ensure that all submissions are original and have not been published elsewhere or concurrently submitted to another venue. 
 				   Plagiarism in any form, including self-plagiarism, will result in desk rejection. <br/><br/>
+				   Submissions must be prepared for anonymous review; authors should remove names, affiliations, and any links or references that could reveal their identity. <br/><br/>
 				   If generative AI tools are used to produce substantial portions of the writing, analysis, or figures, their use must be clearly disclosed in the paper’s acknowledgments or methodology section. Authors remain fully responsible for the correctness, originality, and integrity of their submissions. <br/><br/>
 				   At least one author of each accepted paper must register and present the work at the workshop. 
 				</p>
