Modify countdown timer and important dates
Updated countdown timer date and extended paper submission deadline.

--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
                      <li><span class="icon_plus list-icon"></span>Accessibility and inclusion in music AI</li>
                   </ul>
 					<script src="https://cdn.logwork.com/widget/countdown.js"></script>
-					<a href="https://logwork.com/countdown-timer" class="countdown-timer" data-style="circles" data-timezone="Asia/Singapore" data-textcolor="#fc0303" data-date="2025-10-24 23:00">Countdown Timer</a>
+					<a href="https://logwork.com/countdown-timer" class="countdown-timer" data-style="circles" data-timezone="Asia/Singapore" data-date="2025-10-29 23:00">Countdown Timer</a>
                   <p>
                      <b>Important Dates</b><br/>
-                     Paper Submission Deadline: 24 October 2025<br/>
-                     Acceptance/Rejection Notice: 14 November 2025<br/>
-                     Camera-Ready Deadline: 14 December 2025<br/>
-                     Workshop Date: 26–27 January 2026
+					  Paper Submission Deadline: <s>24 October 2025</s> <b>Extended to 29 October 2025 (Wednesday)</b><br/>
+					  Acceptance/Rejection Notice: 14 November 2025<br/>
+					  Camera-Ready Deadline: 14 December 2025<br/>
+					  Workshop Date: 26–27 January 2026
                   </p>
                   <p>
                      <b>Publishing Venue</b><br/>
