--- a/index.html
+++ b/index.html
@@ -149,23 +149,23 @@
 				  <p>
 				   <b>Submission Instructions</b><br/>
 				   Paper format: Maximum of 11 pages (excluding references). Please follow the PMLR format using this template: 
-				    <a href="https://www.overleaf.com/latex/templates/eaim-template/bvqzcsngcxwz" target="_blank" style="font-weight:bold; color:#0b5cff;">
+				    <a href="https://www.overleaf.com/latex/templates/eaim-template/bvqzcsngcxwz" target="_blank" style="font-weight:bold;  background-color:#2BA560; color:white;">
 					   EAIM Template on Overleaf
 					</a>
 				   <br/><br/>
 				   Submission Portal: 
-				   <a href="https://openreview.net/group?id=AAAI.org/2026/Workshop/EAIM" target="_blank" style="font-weight:bold; color:#0b5cff;">
+				   <a href="https://openreview.net/group?id=AAAI.org/2026/Workshop/EAIM" target="_blank" style="font-weight:bold;  background-color:#2BA560; color:white;">
 					  OpenReview – EAIM Workshop
 				   </a>
 				   <br/>
-				   <span style="color:red; font-weight:bold;">
+				   <span style="color:#F76C3B; font-weight:bold;">
 					  Note: To sign up for OpenReview, you must use a university or institution email address. 
 					  If you are not affiliated with any institution, account creation with a personal email may take up to 2 weeks so please plan accordingly. 
 				   </span>
 				  </p>
 				  <p>
 				   <b>Submission Policies</b><br/>
-				   <b><span style="color:#b22222;">
+				   <b><span style="color:#F76C3B;">
 					Submissions will follow a double-blind policy and must be prepared for anonymous review; authors should remove names, affiliations, and any links or references that could reveal their identity.
 					</span></b> <br/><br/>
 				   Authors must ensure that all submissions are original and have not been published elsewhere or concurrently submitted to another venue. 
