--- a/index.html
+++ b/index.html
@@ -175,16 +175,16 @@
 					  OpenReview – EAIM Workshop
 				   </a>
 				   <br/>
-				   <span style="color:#F76C3B; font-weight:bold;">
-					  Note: To sign up for OpenReview, you must use a university or institution email address. 
+				   
+					  Note: To sign up for OpenReview, you must use a <span style="color:#F76C3B; font-weight:bold;">university or institution email address</span>. 
 					  If you are not affiliated with any institution, account creation with a personal email may take up to 2 weeks so please plan accordingly. 
-				   </span>
+				   
 				  </p>
 				  <p>
 				   <b>Submission Policies</b><br/>
-				   <b><span style="color:#F76C3B;">
-					Submissions will follow a double-blind policy and must be prepared for anonymous review; authors should remove names, affiliations, and any links or references that could reveal their identity.
-					</span></b> <br/><br/>
+				   <b>
+					Submissions will follow a <span style="color:#F76C3B;">double-blind</span> policy and must be prepared for anonymous review; authors should remove names, affiliations, and any links or references that could reveal their identity.
+					</b> <br/><br/>
 				   Authors must ensure that all submissions are original and have not been published elsewhere or concurrently submitted to another venue. 
 				   Plagiarism in any form, including self-plagiarism, will result in desk rejection. <br/><br/>
 				   If generative AI tools are used to produce substantial portions of the writing, analysis, or figures, their use must be clearly disclosed in the paper’s acknowledgments or methodology section. Authors remain fully responsible for the correctness, originality, and integrity of their submissions. <br/><br/>
