--- a/index.html
+++ b/index.html
@@ -166,12 +166,12 @@
 				  <p>
 				   <b>Submission Instructions</b><br/>
 				   Paper format: Maximum of 11 pages (excluding references). Please follow the PMLR format using this template: 
-				    <a href="https://www.overleaf.com/latex/templates/eaim-template/bvqzcsngcxwz" target="_blank" style="font-weight:bold;  background-color:#2BA560; color:white;">
+				    <a href="https://www.overleaf.com/latex/templates/eaim-template/bvqzcsngcxwz" target="_blank" style="font-weight:bold;  color:#2BA560; ">
 					   EAIM Template on Overleaf
 					</a>
 				   <br/><br/>
 				   Submission Portal: 
-				   <a href="https://openreview.net/group?id=AAAI.org/2026/Workshop/EAIM" target="_blank" style="font-weight:bold;  background-color:#2BA560; color:white;">
+				   <a href="https://openreview.net/group?id=AAAI.org/2026/Workshop/EAIM" target="_blank" style="font-weight:bold;  color:#2BA560; ;">
 					  OpenReview – EAIM Workshop
 				   </a>
 				   <br/>
