Change workshop date to 26th January 2026
Updated workshop date to reflect a one-day event.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
          <div class="page-title-text wow fadeInUp">
             <h1>1st International Workshop on Emerging AI Technologies for Music</h1>
             <p><b>Held in conjunction with AAAI-26</b></p>
-            <p>26–27 January 2026, Singapore</p>
+            <p>26th January 2026, Singapore</p>
             <div class="page-title-bottom-link">
                <a class="big-link-1 btn scroll-link" href="#cfp"><b>Call for Papers</b></a>
                <a class="big-link-2 btn scroll-link" href="#portfolio"><b>Speakers</b></a>
@@ -157,7 +157,7 @@
 					  Paper Submission Deadline: <s>24 October 2025</s> <b>Extended to 29 October 2025 (Wednesday)</b><br/>
 					  Acceptance/Rejection Notice: 14 November 2025<br/>
 					  Camera-Ready Deadline: 14 December 2025<br/>
-					  Workshop Date: 26–27 January 2026
+					  Workshop Date: 26th January 2026 (1 day workshop)
                   </p>
                   <p>
                      <b>Publishing Venue</b><br/>
