Update list of candidates in index.html

--- a/index.html
+++ b/index.html
@@ -419,9 +419,23 @@
 					   Dr. Berker Banar, Ellison Institute of Technology Oxford <br/>
 					   Benjamin Hayes, Sony CSL, Paris <br/>
 					   Shuoyang Zheng, PhD candidate, Queen Mary University of London <br/>
-					   MA Yinghao, PhD candidate, Queen Mary University of London <br/>
 					   Zixun Guo, PhD candidate, Queen Mary University of London <br/>
-					   Jordie Shier, PhD candidate, Queen Mary University of London <br/>			
+					   Jordie Shier, PhD candidate, Queen Mary University of London <br/>
+					   Marco Pasini, PhD Candidate, Queen Mary University of London <br/>
+					   Sungkyun Chang, Research Assistant, Queen Mary University of London <br/>
+					   Tongyu Lu, PhD Candidate, Singapore University of Technology and Design <br/>
+					   Soumya Sai Vanka, PhD Candidate, Queen Mary University of London <br/>
+					   Renhang Liu, Research Assistant, Singapore University of Technology and Design <br/>
+					   Dimos Makris, Singapore University of Technology and Design <br/>
+					   Maojia Song, Singapore University of Technology and Design <br/>
+					   Weisheng Jin, Singapore University of Technology and Design <br/>
+					   Anuradha Chopra, PhD Candidate, Singapore University of Technology and Design <br/>
+					   Aditya Bhattacharjee, PhD Candidate, Queen Mary University of London <br/>
+					   Jinwei Zhao, National University of Singapore <br/>
+					   Viet Toan Dinh, PhD Candidate, Université de Lille <br/>
+					   Alexandre D'Hooge, Université de Lille <br/>
+					   Louis Bradshaw, PhD Candidate, Queen Mary University of London <br/>
+					   Francesca Ronchini, PhD Candidate, Polytechnic University of Milan <br/>
 					   <br/><br/>
 					</p>
 				 </div>
