Add speaker names to keynote sessions
Updated keynote session titles with speaker names.

--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
                            </tr>
                            <tr>
                               <td style="padding: 15px;">09:10</td>
-                              <td style="padding: 15px;"><strong>Keynote 1</strong></td>
+                              <td style="padding: 15px;"><strong>Keynote 1 - Ethan Manilow (Google Deepmind)</strong></td>
                            </tr>
                            <tr>
                               <td style="padding: 15px;">10:00</td>
-                              <td style="padding: 15px;"><strong>Keynote 2</strong></td>
+                              <td style="padding: 15px;"><strong>Keynote 2 - Harry Tan (Universal Music Group)</strong></td>
                            </tr>
                            <tr class="warning" style="background-color: #fcf8e3;">
                               <td style="padding: 15px;">10:50</td>
@@ -175,11 +175,11 @@
 
                            <tr>
                               <td style="padding: 15px;">13:30</td>
-                              <td style="padding: 15px;"><strong>Keynote 3</strong></td>
+                              <td style="padding: 15px;"><strong>Keynote 3 - Dorien Herremans (SUTD)</strong></td>
                            </tr>
                            <tr>
                               <td style="padding: 15px;">14:20</td>
-                              <td style="padding: 15px;"><strong>Keynote 4</strong></td>
+                              <td style="padding: 15px;"><strong>Keynote 4 - Ziqian Ning (ByteDance-Seed & ASLP@NPU)</strong></td>
                            </tr>
                            <tr class="warning" style="background-color: #fcf8e3;">
                               <td style="padding: 15px;">15:10</td>
@@ -191,7 +191,7 @@
                            </tr>
                            
                            <tr>
-                              <td style="padding: 15px; vertical-align: top;">16:00<br/>|<br/>18:00</td>
+                              <td style="padding: 15px; vertical-align: top;">16:00<br/>|<br/>17:00</td>
                               <td style="padding: 15px;">
                                  <strong>Poster Session</strong>
                                  <ul style="list-style-type: none; padding-left: 0; margin-top: 15px;">
@@ -416,28 +416,6 @@
 					<p>
 					   <b>Bio</b> Dorien is an Associate Professor at Singapore University of Technology and Design (SUTD), where she leads the Audio, Music, and AI (AMAAI) Lab. Before joining SUTD, she was a Marie Sklodowska-Curie Postdoctoral Fellow at the Centre for Digital Music at Queen Mary University of London. She was also nominated on the Singapore 100 Women in Tech list in 2021, and one of the top 30 SAIL Award (Super AI Leader) Finalists in 2024 at the World AI Conference.
 					</p>
-				 </div>
-			  </div>
-		   </div>
-		</div>
-		<!-- Speaker: Dr. Hanoi Hantrakul -->
-		<div class="block-2-container section-container section-container-gray about-block-2-container">
-		   <div class="container">
-			  <div class="row">
-				 <div class="col-sm-8 block-2-box block-2-left wow fadeInLeft">
-					<h3>Dr. Hanoi Hantrakul / <span>ex-Google, ByteDance, TikTok</span></h3>
-					<p>
-					   <b>Bio</b> Lamtharn "Hanoi" Hantrakul is an AI Research Scientist and AI Sound Artist based in Bangkok, Thailand. His work explores how machine learning can empower music, arts and culture, particularly from Southeast Asia. With over 8 years of experience in the tech industry, he has developed state-of-the-art Generative AI models at Google, TikTok and ByteDance as a Senior AI Research Scientist. He is co-inventor of notable technologies including Google's open source DDSP library and the music LLM SEED-MUSIC deployed in Doubao (China's ChatGPT).
-					   As a sound artist performing under "yaboihanoi," his electronic music incorporates Thai tunings and rhythms. He won the 2022 international AI Song Contest with "Enter Demons and Gods" and has performed at SONAR Music Festival alongside artists like Skrillex and Four Tet. His musical instrument "Fidular" received an A' Silver Award and Core77 Design Award in 2017 and is permanently exhibited at the Musical Instruments Museum in Phoenix, AZ. His work on machine learning and cultural empowerment has been covered by international media including Deutschlandfunk, Scientific American and Fast Company.
-					</p>
-				 </div>
-				 <div class="col-sm-4 block-2-box block-2-right wow fadeInLeft">
-					<div class="block-2-img-container">
-					   <img src="assets/img/about/hanoi.jpeg" alt="Dr. Hanoi Hantrakul">
-					   <div class="img-container-line line-1"></div>
-					   <div class="img-container-line line-2"></div>
-					   <div class="img-container-line line-3"></div>
-					</div>
 				 </div>
 			  </div>
 		   </div>
