Update speaker information from Elio Quinton to Hao Hao Tan

--- a/index.html
+++ b/index.html
@@ -378,19 +378,19 @@
                </div>
             </div>
          </div>
-		 <!-- Speaker: Dr. Elio Quinton -->
+		 <!-- Speaker: Hao Hao Tan -->
 		<div class="block-2-container section-container section-container-gray about-block-2-container">
 		   <div class="container">
 			  <div class="row">
 				 <div class="col-sm-8 block-2-box block-2-left wow fadeInLeft">
-					<h3>Dr. Elio Quinton / <span>Universal Music Group</span></h3>
+					<h3>Hao Hao Tan / <span>Universal Music Group</span></h3>
 					<p>
-					   <b>Bio</b> Elio is a scientist, engineer and leader with over a decade of experience in Artificial Intelligence, Machine Learning, and Audio Technology. Currently VP of Artificial Intelligence at Universal Music Group (UMG) and advisor to creative AI startups, he founded and leads the Music & Audio Machine Learning Lab (MAML), the first ever Machine Learning R\&D group in the recorded music industry. MAML's mission is to invent and build next-generation AI/ML tools to support and empower artists and industry professionals globally. Trained as both a scientist, engineer and musician, Elio holds a PhD in ML and Audio DSP from the Center for Digital Music, a Physics MSc, a Music Technology MA, and a diploma in Commercial Music performance from BIMM London.
+					   <b>Bio</b> Hao Hao Tan is an AI & Audio Scientist at Universal Music Group, a member of the Music and Audio Machine Learning Lab (MAML), the first ever Machine Learning R&D group in the recorded music industry. MAML’s mission is to invent and build next-generation AI/ML tools to support and empower artists and industry professionals globally.  His work has been published in leading conferences including ISMIR, ICML & WASPAA.
 					</p>
 				 </div>
 				 <div class="col-sm-4 block-2-box block-2-right wow fadeInLeft">
 					<div class="block-2-img-container">
-					   <img src="assets/img/about/elio2.png" alt="Elio Quinton">
+					   <img src="assets/img/about/hao_hao_tan.jpeg" alt="Hao Hao Tan">
 					   <div class="img-container-line line-1"></div>
 					   <div class="img-container-line line-2"></div>
 					   <div class="img-container-line line-3"></div>
