--- a/index.html
+++ b/index.html
@@ -90,6 +90,34 @@
                   <p>
                      This full day workshop, part of a new annual series on the latest developments in AI for music, explores how AI can become a true creative collaborator rather than just another automation tool. As AI transforms music composition, performance, and production, we're seeing an exciting shift from fully autonomous systems toward human-centered approaches. We aim to explore the latest research in human-centric AI for music and discuss how systems can empower humans to shape AI outputs through intuitive interfaces, interactive workflows, interpretable systems and meaningful user-controls. As the field is increasingly shifting toward co-creative and controllable systems, we’ll dive into cutting-edge research and discuss how meaningful musical outcomes can arise through human-machine collaboration. Join us for this inaugural workshop as we explore how to design AI that enhances rather than overshadows human musical creativity.
                   </p>
+				  
+				  	<div style="margin-top:30px; padding:20px; background:#f9f9f9; border-left:5px solid #2BA560;">
+	  <h4 style="margin-top:0;"><strong>Workshop Details</strong></h4>
+	  <p style="margin-bottom:10px;">
+		<strong>Date:</strong> 26 January 2026 (Monday)<br/>
+		<strong>Time:</strong> 8:30 AM – 5:00 PM (Full-day workshop)
+	  </p>
+
+	  <p style="margin-bottom:10px;">
+		<strong>Venue:</strong><br/>
+		Grand Mercure Roxy Hotel<br/>
+		50 East Coast Road, Roxy Square<br/>
+		Singapore 428769
+	  </p>
+
+	  <p style="margin-bottom:10px;">
+		The EAIM workshop will be held at a <strong>satellite venue</strong> assigned by AAAI. 
+		The venue offers full onsite AV support, a dedicated poster room, scheduled refreshment breaks, 
+		and badge pickup facilities for attendees who have not collected their badges at the Singapore EXPO.
+	  </p>
+
+	  <p style="margin-bottom:0;">
+		<strong>Shuttle Bus Service:</strong><br/>
+		Morning shuttles will depart from each official event hotel at <strong>8:00 AM</strong>, arriving in time for the <strong>8:30 AM</strong> workshop start.<br/>
+		Evening return buses will depart the venue at <strong>5:30 PM</strong>.
+	  </p>
+	</div>
+				  
                </div>
             </div>
          </div>
