--- a/index.html
+++ b/index.html
@@ -91,6 +91,21 @@
                   <p>
                      This full day workshop, part of a new annual series on the latest developments in AI for music, explores how AI can become a true creative collaborator rather than just another automation tool. As AI transforms music composition, performance, and production, we're seeing an exciting shift from fully autonomous systems toward human-centered approaches. We aim to explore the latest research in human-centric AI for music and discuss how systems can empower humans to shape AI outputs through intuitive interfaces, interactive workflows, interpretable systems and meaningful user-controls. As the field is increasingly shifting toward co-creative and controllable systems, we’ll dive into cutting-edge research and discuss how meaningful musical outcomes can arise through human-machine collaboration. Join us for this inaugural workshop as we explore how to design AI that enhances rather than overshadows human musical creativity.
                   </p>
+                  <div style="margin-top:25px; padding:20px; background:#f5f8ff; border-left:5px solid #2BA560;">
+                     <h4 style="margin-top:0;"><strong>Workshop Proceedings</strong></h4>
+                     <p style="margin-bottom:10px;">
+                        The final proceedings of the <b>1st International Workshop on Emerging AI Technologies for Music (EAIM 2026)</b> 
+                        are now available as an official volume in the Proceedings of Machine Learning Research (PMLR).
+                     </p>
+                     <p style="margin-bottom:0;">
+                        The volume includes peer-reviewed papers presented at the workshop, covering recent advances in 
+                        AI-driven music composition, generation, interaction, and human–AI co-creativity.
+                        <br/><br/>
+                        <a href="https://proceedings.mlr.press/v303/" target="_blank" style="font-weight:bold; color:#2BA560;">
+                           Access the EAIM 2026 PMLR volume
+                        </a>
+                     </p>
+                  </div>
                   <div style="margin-top:30px; padding:20px; background:#f9f9f9; border-left:5px solid #2BA560;">
                      <h4 style="margin-top:0;"><strong>Workshop Details</strong></h4>
                      <p style="margin-bottom:10px;">
